# AIOT-fruits-info

./: .gitignore  README.md  pyproject.toml  read_data.py  server.py
data/: fruits_and_vegatables.csv  units.csv
